--- a/stopwatch.html
+++ b/stopwatch.html
@@ -19,7 +19,7 @@
             background-position: center;
             background-size: cover;
             font-family: sans-serif;
-            font-weight: bold;
+            font-weight: 500;
         }
 
         .container {
